# MixingBuddy-gain

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  analyze_direction_accuracy.py  analyze_predictions.py  augment_no_error_samples.py  compare_evaluations.py  debug_alignment.py  detailed_evaluation.py  docker-compose.yml  explain_baseline.py  filter_augmented_no_error.py  fix_no_error_template.py  job.sh  job_alignment.sh  job_aug.sh  job_debug_alignment.sh  job_dpo.sh  job_eval_alignment.sh  job_infer.sh  job_qformer_sft.sh  job_sft.sh  job_stem_gain.sh  plot_evaluation_results.py  pyproject.toml  requirements-dev.txt  requirements.txt  statistical_analysis.py
configs/: 03_evaluate_synthesis_instructions.yaml  03_evalutate_synthesis_instructions.yaml  03_train_synthesis_instructions.yaml  04_evaluate_mlp_projection.yaml  04_train_mlp_projection.yaml  05_evaluate_extended_lora.yaml  05_train_extended_lora.yaml  06_evaluate_transformer_projection.yaml  06_train_perceiver_projection.yaml  06_train_transformer_projection.yaml  07_evaluate_all_modules.yaml  07_train_all_modules.yaml  08_train_attention_only.yaml  09_eval_no_anchor.yaml  09_train_no_anchor.yaml  10_eval_projection_only.yaml  10_train_projection_only.yaml  11_eval_mert_musdb_expanded.yaml  11_train_mert_musdb_expanded.yaml  12_eval_mert_musdb_expanded_deeper.yaml  12_train_mert_musdb_expanded_deeper.yaml  13_eval_mert_lora_outputs.yaml  13_train_mert_lora_outputs.yaml  14_eval_mert_lora_attn_outputs.yaml  14_train_mert_lora_attn_outputs.yaml  15_eval_mert_cross_attention.yaml  15_train_mert_cross_attention.yaml  16_eval_dpo.yaml  16_train_dpo.yaml  17_train_dpo_proj_only.yaml  18_eval_balanced_responses.yaml  18_train_balanced_responses.yaml  19_train_mert_top3_lora.yaml  20_eval_mert_top3_lora_resume.yaml  20_train_mert_top3_lora_resume.yaml  21_train_dpo_fixed.yaml  22_eval_mert_musdb_expanded_augmented.yaml  22_train_mert_musdb_expanded_augmented.yaml  23_eval_mert_musdb_expanded_augmented_lora_all_linear.yaml  23_eval_mert_musdb_expanded_augmented_lora_all_linear_gelu.yaml  (+39 more)
configs/data/: 01_musdb_stats.yaml  02_elaborate_response_synthesis.yaml  02_preprocess_musdb.yaml  03_synthesis_instructions.yaml  04_error_policy.yaml  04_instructions_no_anchor.yaml  05_musdb_expanded.yaml  05_synthesis.yaml  06_dpo_dataset.yaml  06_musdb_expanded_augmented.yaml  07_dpo_data.yaml  07_musdb_expanded_augmented_reduced.yaml  08_musdb_expanded_augmented_variations.yaml  09_dpo_dataset_variations.yaml  10_dpo_data_variations.yaml  automatic_mixing.yaml  automatic_mixing_thresholds.yaml  multi_input_mixing.yaml  musdb_dataset.yaml  musdb_stats.yaml  preprocess_musdb.yaml  stem_gain_data.yaml  synthesis.yaml  test_run.yaml
configs/evaluation/: evaluation.yaml
configs/experiment_naming/: experiment_naming.yaml
configs/experiment_tracking/: mlflow.yaml  wandb.yaml
configs/model/: deepseek_7b_mert_linear_proj_lora_attention.yaml  deepseek_7b_passt_linear_proj_lora_attention.yaml  deepseek_llm_7b_mert_musdb_expanded_lora_all_linear_gelu.yaml  llama2_13b.yaml  llama2_7b.yaml  qwen2_5_14b_mert_musdb_lora_attention.yaml  (+42 more)
data/: musdb18_processed  musdb18hq  musdb18hq_processed  the-mix-evaluation-dataset
final-paper/: Makefile  README.md  main.tex  references.bib
proposal/: Makefile  README.md  RESEARCH_DIRECTION.md  main.tex  references.bib
proposal-presentation/: Makefile  README.md  main.tex  references.bib
scripts/: 01_analyze_musdb_stats.py  02_preprocess_musdb.py  03_aggregate_track_stats.py  04_label_errors.py  05_synthesize_training_data.py  06_train_model.py  07_create_dpo_dataset.py  07_evaluate_model.py  08_generate_samples.py  08_train_dpo.py  09_compute_metrics.py  10_plot_metrics.py  __init__.py  analyze_musdb_stats.py  check_llama_access.py  check_template_distribution.py  create_musdb_dataset.py  create_variations_dataset.py  edit_synthesis_jsonl.py  eval_alignment_retrieval.py  eval_stem_gain_model.py  evaluate.py  fix_data_templates.py  inference.py  medleydb_stats.py  prepare_data.py  preprocess_musdb.py  reduce_jsonl_by_category.py  simple_generation_script.py  simple_training_script.py  synthesize_data.py  synthesize_instrument_classification.py  test_imports_and_cuda.py  train.py  train_alignment.py  train_stem_gain_model.py  visualize_dataset.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_basic.py  test_dataset.py  test_dataset_loading.py  test_encodec.py  test_experiment_tracking.py  test_lora_model.py  test_metrics.py  test_model_forward.py  test_projection.py  test_trainer.py
(+219 files in other folders)
